@startuml BomberQuest_Core_Classes

skinparam classAttributeIconSize 0
skinparam backgroundColor transparent

' Core Package
package "com.bomberman.core" {
    
    class GameManager <<Singleton>> {
        - {static} instance: GameManager
        + {static} TILE_SIZE: int
        + {static} GRID_W: int
        + {static} GRID_H: int
        - walls: List<GameObject>
        - enemies: List<GameObject>
        - bombs: List<GameObject>
        - player: Player
        - currentState: GameState
        __
        + {static} getInstance(): GameManager
        + init(): void
        + resetGame(): void
        + update(): void
        + render(Graphics2D): void
        + setState(GameState): void
        + getPlayer(): Player
    }
    
    class EntityFactory <<Factory>> {
        + {static} createWall(int, int, boolean): GameObject
        + {static} createEnemy(int, int): Enemy
        + {static} createBomb(int, int, int): Bomb
    }
    
    class TransitionManager <<Singleton>> {
        - {static} instance: TransitionManager
        - transitioning: boolean
        - type: TransitionType
        __
        + {static} getInstance(): TransitionManager
        + startTransition(...): void
        + update(GameManager): void
        + render(Graphics2D, ...): void
    }
    
    enum TransitionType {
        FADE
        SLIDE_LEFT
        SLIDE_RIGHT
        ZOOM_OUT
        DISSOLVE
    }
}

' Main Entry
class BomberQuest {
    - timer: Timer
    - gameManager: GameManager
    __
    + BomberQuest()
    + paintComponent(Graphics): void
    + {static} main(String[]): void
}

' Relationships
BomberQuest --> GameManager : uses
GameManager ..> EntityFactory : creates entities
GameManager ..> TransitionManager : manages transitions
TransitionManager --> TransitionType : uses

note right of GameManager
  Central controller using
  Singleton Pattern
end note

note right of EntityFactory
  Factory Pattern for
  creating game entities
end note

@enduml
